crates/tensor4all-capi/include/tensor4all_capi.h

/**
 * Status code returned by fallible C API functions.
 *
 * The explicit enum keeps the ABI type-safe for C consumers while preserving
 * the existing numeric values used by downstream bindings.
 *
 * # Examples
 *
 * ```
 * use tensor4all_capi::{t4a_last_error_message, t4a_status_code, T4A_NULL_POINTER};
 *
 * let status = t4a_last_error_message(std::ptr::null_mut(), 0, std::ptr::null_mut());
 * assert_eq!(status, t4a_status_code::T4A_NULL_POINTER);
 * assert_eq!(status, T4A_NULL_POINTER);
 * ```
 *
 */
typedef enum t4a_status_code {
  /**
   * Operation completed successfully.
   */
  T4A_SUCCESS = 0,
  /**
   * A null pointer was passed where a valid pointer was required.
   */
  T4A_NULL_POINTER = -1,
  /**
   * An invalid argument was provided.
   */
  T4A_INVALID_ARGUMENT = -2,
  /**
   * Too many tags would be added to a fixed-capacity tag set.
   */
  T4A_TAG_OVERFLOW = -3,
  /**
   * A tag string exceeds a fixed-capacity tag storage limit.
   */
  T4A_TAG_TOO_LONG = -4,
  /**
   * The provided output buffer is too small for the result.
   */
  T4A_BUFFER_TOO_SMALL = -5,
  /**
   * An internal error occurred (e.g., a panic was caught).
   */
  T4A_INTERNAL_ERROR = -6,
  /**
   * The requested API exists but is not implemented yet.
   */
  T4A_NOT_IMPLEMENTED = -7,
} t4a_status_code;
/**
 * Opaque index type for the C API.
 */
typedef struct t4a_index {
  const void *_private;
} t4a_index;
/**
 * Clone an index handle.
 */
enum t4a_status_code t4a_index_clone(const struct t4a_index *src, struct t4a_index **out);
/**
 * Get the dimension of an index.
 */
enum t4a_status_code t4a_index_dim(const struct t4a_index *ptr, size_t *out_dim);
/**
 * Query whether an index has the provided tag.
 */
enum t4a_status_code t4a_index_has_tag(const struct t4a_index *ptr,
                                       const char *tag,
                                       int32_t *out_has_tag);
/**
 * Check whether an index handle is assigned.
 */
int32_t t4a_index_is_assigned(const struct t4a_index *obj);
/**
 * Create a new index with explicit tags and prime level.
 */
enum t4a_status_code t4a_index_new(size_t dim,
                                   const char *tags_csv,
                                   int64_t plev,
                                   struct t4a_index **out);
/**
 * Create a new index with an explicit identity, tags, and prime level.
 *
 * **Serialization semantics:** index IDs are internal identities used to
 * distinguish indices with identical tags and prime levels. Constructing an
 * index with an explicit ID is intended for round-tripping indices through a
 * serialized representation (file, stream, or foreign buffer) where the
 * original ID must be preserved. Callers must not fabricate IDs for
 * application logic; two indices with the same ID, tags, and prime level are
 * treated as the same index by contraction and index-matching operations.
 *
 * # Safety
 *
 * `tags_csv` must be a valid NUL-terminated UTF-8 string. `out` must be a
 * valid, non-null pointer to a `t4a_index*` location.
 *
 * # Errors
 *
 * Returns [`T4A_INVALID_ARGUMENT`] when `dim` is zero, `plev` is negative, or
 * the tag string is malformed.
 */
enum t4a_status_code t4a_index_new_with_id(size_t dim,
                                           uint64_t id,
                                           const char *tags_csv,
                                           int64_t plev,
                                           struct t4a_index **out);
/**
 * Release an index handle.
 */
void t4a_index_release(struct t4a_index *obj);